[project]
name = "visit-n-sites-and-collect"
version = "1.0.0"
description = "Visit N sites and collect."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "google-api-core>=2.26.0",
    "google-api-python-client>=2.184.0",
    "google-auth-oauthlib>=1.2.2",
    "keyring>=25.7.0",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "yamllint>=1.37.1",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
